--- a/index.html
+++ b/index.html
@@ -14,7 +14,36 @@
 </head>
 <body>
   <div id="app">
+    <div class="container">
+      <div class="wrapper">
+        <h1>STAR WARS</h1>
+        <div class="images">
+          <div class="back">
+            <i class="fas fa-caret-left fa-2x"></i> 
+          </div>
 
+          <img src="assets/img/episodio I.png" alt="">
+
+          <div class="nav">
+            <i class="fas fa-circle active"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i>
+          </div>
+
+          <div class="next">
+            <i class="fas fa-caret-right fa-2x"></i> 
+          </div>
+
+        </div>
+      </div>
+    </div>
+    
   </div>
   
   <script src="assets/js/script.js"></script>
