--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <div class="container">
       <div class="wrapper">
         <h1>STAR WARS</h1>
+
         <div class="images">
-          <div class="back">
+
+          <div class="back" @click="goBack">
             <i class="fas fa-caret-left fa-2x"></i> 
           </div>
 
-          <img src="assets/img/episodio I.png" alt="">
+          <img :src="img[counter]" alt="">
 
           <div class="nav">
-            <i class="fas fa-circle active"></i>
+            <!-- <i class="fas fa-circle active"></i>
             <i class="fas fa-circle"></i>
             <i class="fas fa-circle"></i>
             <i class="fas fa-circle"></i>
@@ -33,14 +35,15 @@
             <i class="fas fa-circle"></i>
             <i class="fas fa-circle"></i>
             <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
+            <i class="fas fa-circle"></i> -->
           </div>
 
-          <div class="next">
+          <div class="next" @click="goNext">
             <i class="fas fa-caret-right fa-2x"></i> 
           </div>
 
         </div>
+
       </div>
     </div>
     
