--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- f_awsome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-  <!-- Vue.js -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-  <!-- style.css -->
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Carousel</title>
-</head>
-<body>
-  <div id="app">
-    <div class="container">
-      <div class="wrapper">
-        <h1>STAR WARS</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- f_awsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <!-- Vue.js -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- style.css -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Carousel</title>
+  </head>
+  <body>
+    <div id="app">
+      <div class="container">
+        <div class="wrapper">
+          <h1>STAR WARS</h1>
 
-        <div class="images">
+          <div class="images">
+            <!-- al click richiamo funzione goBack -->
+            <div class="back" @click="goBack">
+              <i class="fas fa-caret-left fa-2x"></i>
+            </div>
 
-          <!-- al click richiamo funzione goBack -->
-          <div class="back" @click="goBack">
-            <i class="fas fa-caret-left fa-2x"></i> 
+            <img :src="img[counter]" alt="" />
+
+            <div class="nav">
+              <!-- stampo i circle con ciclo v-for -->
+              <!-- quando l'indice è uguale al counter aggiungo classe active -->
+              <!-- al click sul circle richiamo il relativo index; così mi mostra la foto collegata -->
+              <i
+                v-for="(circle, index) in img"
+                :class="(index === counter) ? 'active' : null"
+                class="fas fa-circle"
+                @click="counter = index"
+              ></i>
+            </div>
+
+            <!-- al click richiamo funzione goNext -->
+            <div class="next" @click="goNext">
+              <i class="fas fa-caret-right fa-2x"></i>
+            </div>
           </div>
 
-          <img :src="img[counter]" alt="">
-
-          <div class="nav">
-            <!-- stampo i circle con ciclo v-for -->
-            <!-- quando l'indice è uguale al counter aggiungo classe active -->
-            <!-- al click sul circle richiamo il relativo index; così mi mostra la foto collegata -->
-            <i v-for="(circle, index) in img"
-            :class="(index === counter) ? 'active' : null"
-             class="fas fa-circle"
-             @click="counter = index"
-             ></i>
+          <div class="consolle">
+            <!-- se playing è true mostro il pulsante stop con relativa funzione al click... -->
+            <i v-if="playing" @click="stop" class="fas fa-stop fa-2x"></i>
+            <!-- ...altrimenti mostro il pulsante play con relativa funzione al click; (di default vedo play perchè in js playing è false) -->
+            <i v-else @click="play" class="fas fa-play fa-2x"></i>
           </div>
-
-          <!-- al click richiamo funzione goNext -->
-          <div class="next" @click="goNext">
-            <i class="fas fa-caret-right fa-2x"></i> 
-          </div>
-
         </div>
-    
-        <div class="consolle">
-          <i v-if="playing" @click="stop" class="fas fa-stop fa-2x"></i>
-          <i v-else @click="play" class="fas fa-play fa-2x"></i>
-        </div>
-  
       </div>
     </div>
-    
-  </div>
-  
-  <script src="assets/js/script.js"></script>
-</body>
+
+    <script src="assets/js/script.js"></script>
+  </body>
 </html>
